--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 Django==2.0.7
+django-cors-headers==2.3.0
+django-rest-auth==0.9.3
 django-rest-framework==0.1.0
 djangorestframework==3.8.2
 pkg-resources==0.0.0
+psycopg2==2.7.5
 psycopg2-binary==2.7.5
 python-decouple==3.1
 pytz==2018.5
+six==1.11.0
