--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
+certifi==2018.4.16
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+defusedxml==0.5.0
 Django==2.0.7
+django-allauth==0.36.0
 django-cors-headers==2.3.0
 django-rest-auth==0.9.3
 django-rest-framework==0.1.0
+django-rest-swagger==2.2.0
 djangorestframework==3.8.2
+idna==2.7
+itypes==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
+oauthlib==2.1.0
+openapi-codec==1.3.2
 Pillow==5.2.0
 pkg-resources==0.0.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 python-decouple==3.1
+python3-openid==3.1.0
 pytz==2018.5
+requests==2.19.1
+requests-oauthlib==1.0.0
+simplejson==3.16.0
 six==1.11.0
+uritemplate==3.0.0
+urllib3==1.23
