--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
 AWS_SES_REGION_NAME =
 AWS_SES_REGION_ENDPOINT =
+
+STRIPE_API_KEY = sk_test_FLCaTLlnXR6AZEu3JTsMv9Ld
