email config in .env.example file

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,12 @@ DB_PORT=5432
 
 
 #add any secret data here
-EMAIL_PORT =
-EMAIL_BACKEND =
+
+EMAIL_HOST = 'smtp.mailtrap.io'
+EMAIL_HOST_USER = 'b4aa529decf2f6'
+EMAIL_HOST_PASSWORD = '3840d4b8bab2a9'
+EMAIL_PORT = '2525'
+
 AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
 AWS_SES_REGION_NAME =
