--- a/.env.example
+++ b/.env.example
@@ -24,5 +24,8 @@ AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
 AWS_SES_REGION_NAME =
 AWS_SES_REGION_ENDPOINT =
-
+EMAIL_HOST = 'smtp.mailtrap.io'
+EMAIL_HOST_USER = 'e8d111623babe3'
+EMAIL_HOST_PASSWORD = '7846b513360ae4'
+EMAIL_PORT = '2525'
 STRIPE_API_KEY = sk_test_FLCaTLlnXR6AZEu3JTsMv9Ld
