changed DEFAULT_FROM_EMAIL and FRONTEND_HOST in settings file

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,17 @@ DB_PORT=5432
 
 
 #add any secret data here
-
+# developing mode
 EMAIL_HOST = 'smtp.mailtrap.io'
 EMAIL_HOST_USER = 'b4aa529decf2f6'
 EMAIL_HOST_PASSWORD = '3840d4b8bab2a9'
 EMAIL_PORT = '2525'
+
+# Production
+# EMAIL_HOST = 'in-v3.mailjet.com'
+# EMAIL_HOST_USER = '3007a968077fe5201d124dc3984b9b90'
+# EMAIL_HOST_PASSWORD = '34382b4843a8433905388f3b4f68f388'
+# EMAIL_PORT = '587'
 
 AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
@@ -27,4 +33,6 @@ AWS_SES_REGION_ENDPOINT =
 
 STRIPE_API_KEY = sk_test_FLCaTLlnXR6AZEu3JTsMv9Ld
 
-FRONTEND_HOST = "localhost:4200"
+FRONTEND_HOST = "wirfi.testiw.codesamaj.com"
+
+DEFAULT_FROM_EMAIL = "service@wirfi.testiw.codesamaj.com"
