--- a/.env.example
+++ b/.env.example
@@ -15,16 +15,16 @@ DB_PORT=5432
 
 #add any secret data here
 # developing mode
-EMAIL_HOST = 'smtp.mailtrap.io'
-EMAIL_HOST_USER = 'b4aa529decf2f6'
-EMAIL_HOST_PASSWORD = '3840d4b8bab2a9'
-EMAIL_PORT = '2525'
+# EMAIL_HOST = 'smtp.mailtrap.io'
+# EMAIL_HOST_USER = 'b4aa529decf2f6'
+# EMAIL_HOST_PASSWORD = '3840d4b8bab2a9'
+# EMAIL_PORT = '2525'
 
 # Production
-# EMAIL_HOST = 'in-v3.mailjet.com'
-# EMAIL_HOST_USER = '3007a968077fe5201d124dc3984b9b90'
-# EMAIL_HOST_PASSWORD = '34382b4843a8433905388f3b4f68f388'
-# EMAIL_PORT = '587'
+EMAIL_HOST = 'in-v3.mailjet.com'
+EMAIL_HOST_USER = '3007a968077fe5201d124dc3984b9b90'
+EMAIL_HOST_PASSWORD = '34382b4843a8433905388f3b4f68f388'
+EMAIL_PORT = '587'
 
 AWS_ACCESS_KEY_ID =
 AWS_SECRET_ACCESS_KEY =
@@ -35,4 +35,4 @@ STRIPE_API_KEY = sk_test_FLCaTLlnXR6AZEu3JTsMv9Ld
 
 FRONTEND_HOST = "wirfi.testiw.codesamaj.com"
 
-DEFAULT_FROM_EMAIL = "service@wirfi.testiw.codesamaj.com"
+DEFAULT_FROM_EMAIL = "service@api.wirfi.testiw.codesamaj.com"
