model and apis for 'add industry type to device.'

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,6 @@ AWS_SES_REGION_ENDPOINT =
 
 STRIPE_API_KEY = sk_test_FLCaTLlnXR6AZEu3JTsMv9Ld
 
-FRONTEND_HOST = "wirfi.testiw.codesamaj.com"
+FRONTEND_HOST = "http://wirfi.testiw.codesamaj.com"
 
 DEFAULT_FROM_EMAIL = "service@api.wirfi.testiw.codesamaj.com"
