[create] password validation added in register and change password

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,4 @@ STRIPE_API_KEY = sk_test_FLCaTLlnXR6AZEu3JTsMv9Ld
 FRONTEND_HOST = "http://wirfi.testiw.codesamaj.com"
 
 DEFAULT_FROM_EMAIL = "service@api.wirfi.testiw.codesamaj.com"
+PASSWORD_VALIDATION_REGEX_PATTERN="(?=.*[a-z])(?=.*[A-Z])(?=.*[$@$#^!%*?&])[A-Za-z\d$@$#^!%*?&]{6,}"
