changed password validation regex  for min 8 characters with at least 1 number or 1 special character

--- a/.env.example
+++ b/.env.example
@@ -37,4 +37,4 @@ FRONTEND_HOST = "http://wirfi.testiw.codesamaj.com"
 
 DEFAULT_FROM_EMAIL = "service@api.wirfi.testiw.codesamaj.com"
 
-PASSWORD_VALIDATION_REGEX_PATTERN="(?=.*[a-z])(?=.*[A-Z])(?=.*[$@$#^!%*?&])[A-Za-z\d$@$#^!%*?&]{6,}"
+PASSWORD_VALIDATION_REGEX_PATTERN="^(?=.*?[A-Za-z])(?=.*?[0-9#?!@$%^&*-]).{8,}$"
