--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-#environment variables
+# environment variables
 SECRET_KEY=iw_(k)xoc!j0bor*t-()xa0qe6_hci8%+w#fs5af5koihir#=i
 
 DEBUG=True
 ALLOWED_HOSTS=*
 
 
-#Database connection string
+# Database connection string
 DB_NAME=wirfi
 DB_USER=postgres
 DB_PASSWORD=****
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 
 
-#add any secret data here
+# add any secret data here
 # developing mode
 # EMAIL_HOST = 'smtp.mailtrap.io'
 # EMAIL_HOST_USER = 'b4aa529decf2f6'
@@ -38,3 +38,8 @@ FRONTEND_HOST = "http://wirfi.testiw.codesamaj.com"
 DEFAULT_FROM_EMAIL = "service@api.wirfi.testiw.codesamaj.com"
 
 PASSWORD_VALIDATION_REGEX_PATTERN="^(?=.*?[A-Za-z])(?=.*?[0-9#?!@$%^&*-]).{8,}$"
+
+# APP VERSION
+ANDROID_VERSION = '1.0'
+IOS_VERSION = '1.0'
+OPTIONAL_UPDATE = False
