Added app update link in response to app version check API

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,5 @@ PASSWORD_VALIDATION_REGEX_PATTERN="^(?=.*?[A-Za-z])(?=.*?[0-9#?!@$%^&*-]).{8,}$"
 ANDROID_VERSION = '1.0'
 IOS_VERSION = '1.0'
 OPTIONAL_UPDATE = False
+ANDROID_LINK = https://bl.ocks.org/d3noob/ced1b9b18bd8192d2c898884033b5529
+IOS_LINK = http://bl.ocks.org/d3indepth/b6d4845973089bc1012dec1674d3aff8
