--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ defusedxml==0.5.0
 Django==2.0.7
 django-allauth==0.36.0
 django-cors-headers==2.3.0
+django-redis==4.9.0
 django-rest-auth==0.9.3
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.8.2
+djangorestframework-jwt==1.11.0
 idna==2.7
 itypes==1.1.0
 Jinja2==2.10
@@ -19,9 +21,11 @@ openapi-codec==1.3.2
 Pillow==5.2.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+PyJWT==1.6.4
 python-decouple==3.1
 python3-openid==3.1.0
 pytz==2018.5
+redis==2.10.6
 requests==2.19.1
 requests-oauthlib==1.0.0
 simplejson==3.16.0
