[create] device_queued_tasks model created to store the task to be done on device when it pings server

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,7 @@ IOS_VERSION = '1.0'
 OPTIONAL_UPDATE = False
 ANDROID_LINK = https://bl.ocks.org/d3noob/ced1b9b18bd8192d2c898884033b5529
 IOS_LINK = http://bl.ocks.org/d3indepth/b6d4845973089bc1012dec1674d3aff8
+
+DEVICE_CONNECTION_HOST_NAME = 192.168.1.1
+DEVICE_CONNECTION_PASSWORD = DUSTbuny1
+BACKEND_PING_URL_FOR_DEVICE = http://192.168.1.161:8000/ping-server/
