--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,9 @@ DB_PORT=5432
 # EMAIL_PORT = '2525'
 
 # Production
-EMAIL_HOST = 'in-v3.mailjet.com'
-EMAIL_HOST_USER = '3007a968077fe5201d124dc3984b9b90'
-EMAIL_HOST_PASSWORD = '34382b4843a8433905388f3b4f68f388'
+EMAIL_HOST = 'in-v3.mailjet.com'   # 'smtp.mailgun.org'
+EMAIL_HOST_USER = '3007a968077fe5201d124dc3984b9b90'   # 'wirfi@mail.codesamaj.com'
+EMAIL_HOST_PASSWORD = '34382b4843a8433905388f3b4f68f388'    # '5pTFLdQ5'
 EMAIL_PORT = '587'
 
 AWS_ACCESS_KEY_ID =
