--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ defusedxml==0.5.0
 Django==2.0.7
 django-allauth==0.36.0
 django-cors-headers==2.3.0
+django-filter==2.0.0
 django-redis==4.9.0
 django-rest-auth==0.9.3
 django-rest-framework==0.1.0
@@ -19,9 +20,11 @@ MarkupSafe==1.0
 oauthlib==2.1.0
 openapi-codec==1.3.2
 Pillow==5.2.0
+pkg-resources==0.0.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 PyJWT==1.6.4
+pylint==2.1.1
 python-decouple==3.1
 python3-openid==3.1.0
 pytz==2018.5
