added pusher credential and API to get list of device and status and to add device status

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,9 @@ IOS_LINK = http://bl.ocks.org/d3indepth/b6d4845973089bc1012dec1674d3aff8
 DEVICE_CONNECTION_HOST_NAME = 192.168.1.1
 DEVICE_CONNECTION_PASSWORD = DUSTbuny1
 BACKEND_PING_URL_FOR_DEVICE = http://192.168.1.161:8000/ping-server/
+
+# PUSHER
+PUSHER_APP_ID = 679243
+PUSHER_KEY = bedffa99f95575cb78ef
+PUSHER_SECRET = af906b4c818488f19623
+PUSHER_CLUSTER = ap2
