--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+asn1crypto==0.24.0
 certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+cryptography==2.4.2
 defusedxml==0.5.0
 Django==2.0.7
 django-allauth==0.36.0
@@ -17,14 +20,20 @@ idna==2.7
 itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
+ndg-httpsclient==0.5.1
 oauthlib==2.1.0
 openapi-codec==1.3.2
 Pillow==5.2.0
 pkg-resources==0.0.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+pusher==2.1.1
+pyasn1==0.4.4
+pycparser==2.19
 PyJWT==1.6.4
 pylint==2.1.1
+PyNaCl==1.3.0
+pyOpenSSL==18.0.0
 python-decouple==3.1
 python3-openid==3.1.0
 pytz==2018.5
