--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asn1crypto==0.24.0
+astroid==2.1.0
+boto3==1.9.69
+botocore==1.12.69
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==4.5.2
 cryptography==2.4.2
 defusedxml==0.5.0
 Django==2.0.7
@@ -16,15 +20,21 @@ django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
+docutils==0.14
 idna==2.7
+isort==4.3.4
 itypes==1.1.0
 Jinja2==2.10
+jmespath==0.9.3
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 ndg-httpsclient==0.5.1
+numpy==1.15.4
 oauthlib==2.1.0
 openapi-codec==1.3.2
+opencv-python==3.4.4.19
 Pillow==5.2.0
-pkg-resources==0.0.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
 pusher==2.1.1
@@ -34,14 +44,21 @@ PyJWT==1.6.4
 pylint==2.1.1
 PyNaCl==1.3.0
 pyOpenSSL==18.0.0
+python-dateutil==2.7.5
 python-decouple==3.1
 python3-openid==3.1.0
 pytz==2018.5
+pyzmq==17.1.2
 redis==2.10.6
 requests==2.19.1
 requests-oauthlib==1.0.0
+s3transfer==0.1.13
 simplejson==3.16.0
 six==1.11.0
 stripe==2.2.0
+typed-ast==1.1.1
 uritemplate==3.0.0
 urllib3==1.23
+websockets==7.0
+wrapt==1.10.11
+zmq==0.0.0
