--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+amqp==2.3.2
 asn1crypto==0.24.0
 astroid==2.1.0
+billiard==3.5.0.5
 boto3==1.9.69
 botocore==1.12.69
+celery==4.2.1
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
@@ -26,6 +29,7 @@ isort==4.3.4
 itypes==1.1.0
 Jinja2==2.10
 jmespath==0.9.3
+kombu==4.2.2.post1
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
@@ -59,6 +63,7 @@ stripe==2.2.0
 typed-ast==1.1.1
 uritemplate==3.0.0
 urllib3==1.23
+vine==1.2.0
 websockets==7.0
 wrapt==1.10.11
 zmq==0.0.0
