--- a/.env.example
+++ b/.env.example
@@ -62,4 +62,5 @@ DEVICE_OFFLINE_TIME_LIMIT_IN_SECONDS = 5*60
 #following secret key is used by backend to check if the request is from
 #the authenticated device( each device will have this secret key and send them while
 #calling the backend api and we use this to verify in view function of api)
-SECRET_KEY_FOR_DEVICE_TO_ACCESS_SERVER = WiRFi-Device-DUSTbuny1
+
+SECRET_KEY_FOR_DEVICE_TO_ACCESS_SERVER = 'qRY,1QC;>#^,S|6M*Ky~<m-+p{ADEfWIRFI'
