[device code] variable are loaded dynamically from config files in python scripts

--- a/wirfi-device-backup/python/aws-server/device_all_configurations.cfg
+++ b/wirfi-device-backup/python/aws-server/device_all_configurations.cfg
@@ -1,7 +1,7 @@
 [AwsServerInfo]
-aws_server_ip_address = 192.168.1.181:8000
-aws_server_ping_address = http://192.168.1.181:8000/server/ping/
-aws_server_set_primary_network_address = http://192.168.1.181:8000/server/set-primary-network/
+aws_server_ip_address = http://api.wirfi.testiw.codesamaj.com/
+aws_server_ping_address = http://api.wirfi.testiw.codesamaj.com/server/ping/
+aws_server_set_primary_network_address = http://api.wirfi.testiw.codesamaj.com/server/set-primary-network/
 secret_key_to_access_server = qRY,1QC;>#^,S|6M*Ky~<m-+p{ADEfWIRFI
 
 [DeviceInfo]
